--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kinesiologia</title>
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
-    {% include "../snipets/navbar.html"%}
+    {% include 'snipets/navbar.html' %}
 </body>
 </html>
