--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,43 @@
     {% bootstrap_javascript %}
 </head>
 <body>
-    {% include 'snipets/navbar.html' %}
-    {% include 'snipets/carousel.html' %}
+        {% include 'snipets/navbar.html' %}
+        {% include 'snipets/carousel.html' %}
+        {% block header %}
+        <div class="d-flex flex-column align-items-center mt-5">
+            <h2 class="text-center">Patologias y tratamientos de fisioterapia</h2>
+            <h6 class="text-center">Infórmate sobre lo último en lesiones y rehabilitación muscular y articular</h6>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="card d-flex flex-column align-items-center m-2" style="width: 18rem;">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <img src="{% static 'img/cervical.svg' %}" alt="" width="150">
+                    <p class="card-text text-center">Cervical</p>
+                    <a href="#" class="btn btn-primary">Saber mas</a>
+                </div>
+              </div>
+              <div class="card d-flex flex-column align-items-center m-2" style="width: 18rem;">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <img src="{% static 'img/hombro.svg' %}" alt="" width="150">
+                    <p class="card-text text-center">Hombro</p>
+                    <a href="#" class="btn btn-primary">Saber mas</a>
+                </div>
+              </div>
+              <div class="card d-flex flex-column align-items-center m-2" style="width: 18rem;">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <img src="{% static 'img/lumbar.svg' %}" alt="" width="150">
+                    <p class="card-text text-center">Lumbar</p>
+                    <a href="#" class="btn btn-primary">Saber mas</a>
+                </div>
+              </div>
+              <div class="card d-flex flex-column align-items-center m-2" style="width: 18rem;">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <img src="{% static 'img/cadera.svg' %}" alt="" width="150">
+                    <p class="card-text text-center">Cadera</p>
+                    <a href="#" class="btn btn-primary">Saber mas</a>
+                </div>
+              </div>
+        </div>
+        {% endblock %}
 </body>
 </html>
