--- a/templates/snipets/navbar.html
+++ b/templates/snipets/navbar.html
@@ -29,7 +29,7 @@
       </li>
       <li>
         <form class="d-flex">
-          <button class="btn btn-outline-success me-2" type="submit">PEDIR_CITA</button>
+          <button class="btn btn-success me-2 " type="submit">PEDIR_CITA</button>
         </form>
       </li>
     </ul>
