--- a/templates/snipets/carousel.html
+++ b/templates/snipets/carousel.html
@@ -1,8 +1,8 @@
 {% load static %}
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" height="50">
+<div id="carouselExampleSlidesOnly" class="carousel slide h-75 overflow-hidden" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <video src="{% static 'video/uno.mp4' %}" autoplay  loop class="w-100"></video>
+        <video src="{% static 'video/example.mp4' %}" autoplay loop width="100%" height="100%"></video>
       </div>
     </div>
-  </div>
+</div>
