--- a/templates/snipets/navbar.html
+++ b/templates/snipets/navbar.html
@@ -1,4 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="sticky-top">
+<div class="d-flex p-2 justify-content-between align-items-center bg-success container-fluid">
+    <div class="">
+        <a href="" class="text-decoration-none text-light">Reserva cita en menos de 1 minuto</a>
+    </div>
+    <div class="text-light">
+        <a href="" class="text-decoration-none text-light">APP IOS</a>
+        /
+        <a href="" class="text-decoration-none text-light">APP Android</a>
+    </div>
+</div>
+<div class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="KINESIOLOGIA" width="30" height="24">
@@ -34,4 +45,5 @@
       </li>
     </ul>
   </div>
+</div>
 </nav>
