Seccion de patologias

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,44 @@
                     <p class="mt-4">Fractura Fémur</p>
                 </div>
            </div>
-            
+    </section>
+    <section>
+        <div class="row align-items-center">
+            <div class="col-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d119838.44675564146!2d-90.1365948!3d20.1777464!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1738098022816!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="col-6 text-center">
+                <h1>Clínica de fisioterapia de Chile</h1>
+                <p >Encontrarnos será una tarea muy fácil para ti porque elegimos una zona muy céntrica para nuestra clínica de fisioterapia deportiva en Chile Además, dispones de cómodo acceso para llegar a Kinesologia en coche, transporte público o caminando.</p>
+                <div class="row align-items-center">
+                    <div class="col-6 p-2">
+                        <a href="" class="d-block">(+34) 91 353 23 23</a>
+                        <a href="" class="d-block">(+34) 625 231 231</a>
+                    </div>
+                    <div class="col-6 p-2">
+                        <a href="" class="d-block">C/ Bolivia</a>
+                        <a href="" class="d-block">Chile</a>
+                    </div>
+                    <div class="col-6 p-2">
+                        <a href="">info@kinesologia.com</a>
+                    </div>
+                    <div class="col-6 p-2">
+                        <p>Lunes a Viernes de 8:00 a 14:00 y de 15:00 a 21:00h
+                            Sábado de 9:00 a 15:00h</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="row align-items-center text-center mt-4">
+            <div class="col-12">
+                <h1>Nuestro equipo de fisioterapeutas</h1>
+            </div>
+            <div class="col-12">
+                <h6>Nuestros expertos en rehabilitación deportiva avanzada emplearán diferentes tipos de tratamientos de fisioterapia para lograr la readaptación, rehabilitación muscular y articular de cualquier patología.</h6>
+            </div>
+        </div>
     </section>
 </article>
 {% endblock %}
