--- a/templates/snipets/carousel.html
+++ b/templates/snipets/carousel.html
@@ -1,8 +1,4 @@
 {% load static %}
-  <div id="carouselExampleSlidesOnly" class="carousel slide h-50 overflow-hidden" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <video src="{% static 'video/example.mp4' %}" autoplay loop width="100%" height="100%"></video>
-        </div>
-      </div>
+  <div  class="overflow-hidden" height="250px">
+    <video src="{% static 'video/example.mp4' %}" autoplay loop width="100%" height="100%"></video>
   </div>
