--- a/templates/index.html
+++ b/templates/index.html
@@ -3,94 +3,12 @@
 {% block container %}
 {% include 'snipets/navbar.html'%}
 {% include 'snipets/carousel.html' %}
-<article>
-    <section class="d-flex flex-column align-items-center mt-4">
-        <h1>Patologías y tratamientos de fisioterapia</h1>
-        <p>Infórmate sobre lo último en lesiones y rehabilitación muscular y articular</p>
-    </section>
-    <section>
-           <div class="row text-center">
-                <div class="col m-4">
-                    <img src=" {% static 'img/cervical_off.png' %}" alt="">
-                    <p class="mt-4">Cervical</p>
-                </div>
-                <div class="col m-4">
-                    <img src=" {% static 'img/hombro_off.png' %}" alt="">
-                    <p class="mt-4">Hombro</p>
-                </div>
-                <div class="col m-4">
-                    <img src=" {% static 'img/lumbar_off.png' %}"  alt="">
-                    <p class="mt-4">Lumbar</p>
-                </div>
-                <div class="col m-4">
-                    <img src=" {% static 'img/cadera_off.png' %}"  alt="">
-                    <p class="mt-4">Cadera</p>
-                </div>
-                <div class="col m-4">
-                    <img src=" {% static 'img/dorsal_off.png' %}"  alt="">
-                    <p class="mt-4">Dorsal</p>
-                </div>
-           </div>
-           <div class="row text-center">
-                <div class="col m-4">
-                    <img src=" {% static 'img/mano_off.png' %}" alt="">
-                    <p class="mt-4">Mano y Codo</p>
-                </div>
-                <div class="col m-4">
-                    <img src=" {% static 'img/rodilla_off.png' %}" alt="">
-                    <p class="mt-4">Rodilla</p>
-                </div>
-                <div class="col m-4">
-                    <img src=" {% static 'img/tobillo_off.png' %}"  alt="">
-                    <p class="mt-4">Tobillo y Pie</p>
-                </div>
-                <div class="col m-4">
-                    <img src=" {% static 'img/atm_off.png' %}"  alt="">
-                    <p class="mt-4">ATM</p>
-                </div>
-                <div class="col m-4">
-                    <img src=" {% static 'img/femur_off.png' %}"  alt="">
-                    <p class="mt-4">Fractura Fémur</p>
-                </div>
-           </div>
-    </section>
-    <section>
-        <div class="row align-items-center">
-            <div class="col-6">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d119838.44675564146!2d-90.1365948!3d20.1777464!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1738098022816!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <div class="col-6 text-center">
-                <h1>Clínica de fisioterapia de Chile</h1>
-                <p >Encontrarnos será una tarea muy fácil para ti porque elegimos una zona muy céntrica para nuestra clínica de fisioterapia deportiva en Chile Además, dispones de cómodo acceso para llegar a Kinesologia en coche, transporte público o caminando.</p>
-                <div class="row align-items-center">
-                    <div class="col-6 p-2">
-                        <a href="" class="d-block">(+34) 91 353 23 23</a>
-                        <a href="" class="d-block">(+34) 625 231 231</a>
-                    </div>
-                    <div class="col-6 p-2">
-                        <a href="" class="d-block">C/ Bolivia</a>
-                        <a href="" class="d-block">Chile</a>
-                    </div>
-                    <div class="col-6 p-2">
-                        <a href="">info@kinesologia.com</a>
-                    </div>
-                    <div class="col-6 p-2">
-                        <p>Lunes a Viernes de 8:00 a 14:00 y de 15:00 a 21:00h
-                            Sábado de 9:00 a 15:00h</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="row align-items-center text-center mt-4">
-            <div class="col-12">
-                <h1>Nuestro equipo de fisioterapeutas</h1>
-            </div>
-            <div class="col-12">
-                <h6>Nuestros expertos en rehabilitación deportiva avanzada emplearán diferentes tipos de tratamientos de fisioterapia para lograr la readaptación, rehabilitación muscular y articular de cualquier patología.</h6>
-            </div>
-        </div>
-    </section>
-</article>
+<div class="container-fluid">
+    <article>
+        {% include 'snipets/patologias.html'%}
+        {% include 'snipets/ubicacion.html'%}
+        {% include 'snipets/equipo.html'%}
+    </article>
+</div>
+
 {% endblock %}
