--- a/templates/snipets/navbar.html
+++ b/templates/snipets/navbar.html
@@ -1,49 +1,52 @@
-<nav class="sticky-top">
-<div class="d-flex p-2 justify-content-between align-items-center bg-success container-fluid">
-    <div class="">
-        <a href="" class="text-decoration-none text-light">Reserva cita en menos de 1 minuto</a>
+<div class="sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container-fluid">
+      <a class="text-light nav-link" href="#">Reserve su cita en menos de un minuto</a>
+      <div class="" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active text-light" aria-current="page" href="#">APP IOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="#">APP Android</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="text-light">
-        <a href="" class="text-decoration-none text-light">APP IOS</a>
-        /
-        <a href="" class="text-decoration-none text-light">APP Android</a>
-    </div>
-</div>
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="KINESIOLOGIA" width="30" height="24">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </div>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">INICIO</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">SERVICIOS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">NOSOTROS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">BLOG</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">EMPLEO</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">CONTACTO</a>
-      </li>
-      <li>
+  </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="KINESIOLOGIA" width="30" height="24">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">SERVICIOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">NOSOTROS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">BLOG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">EMPLEO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">CONTACTO</a>
+          </li>
+        </ul>
         <form class="d-flex">
-          <button class="btn btn-success me-2 " type="submit">PEDIR_CITA</button>
+          <button class="btn btn-success" type="submit">PEDIR CITA</button>
         </form>
-      </li>
-    </ul>
-  </div>
+      </div>
+    </div>
+  </nav>
 </div>
-</nav>
