--- a/templates/snipets/carousel.html
+++ b/templates/snipets/carousel.html
@@ -1,4 +1,12 @@
 {% load static %}
-  <div  class="overflow-hidden" height="250px">
-    <video src="{% static 'video/example.mp4' %}" autoplay loop width="100%" height="100%"></video>
+  <div  class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active c-image">
+        <video class="d-block w-100" src="{% static 'video/example.mp4' %}" autoplay loop></video>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+    </div>
   </div>
