--- a/templates/snipets/equipo.html
+++ b/templates/snipets/equipo.html
@@ -1,10 +1,85 @@
 {% load static %}
-<div class="row align-items-center text-center mt-4">
-    <div class="col-12">
-        <h1>Nuestro equipo de fisioterapeutas</h1>
+<section class="bg-light">
+    <div class="row align-items-center text-center mt-4">
+        <div class="col-12">
+            <h1>Nuestro equipo de fisioterapeutas</h1>
+        </div>
+        <div class="col-12">
+            <h6>Nuestros expertos en rehabilitación deportiva avanzada emplearán diferentes tipos de tratamientos de fisioterapia para lograr la readaptación, rehabilitación muscular y articular de cualquier patología.</h6>
+        </div>
     </div>
-    <div class="col-12">
-        <h6>Nuestros expertos en rehabilitación deportiva avanzada emplearán diferentes tipos de tratamientos de fisioterapia para lograr la readaptación, rehabilitación muscular y articular de cualquier patología.</h6>
+    <div class="row align-items-center">
+        <div class="col-sm-12 col-lg-3 mt-4">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'img/equipo/Belen.jpg' %}" alt="Card image cap">
+                <div class="card-body bg-success text-light">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+                </div>
+            </div>
+        </div>
+        <div class=" col-sm-12 col-lg-3 mt-4">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'img/equipo/David.jpg' %}" alt="Card image cap">
+                <div class="card-body bg-success text-light">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3 col-lg-3 mt-4">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'img/equipo/Alvaro.jpg' %}" alt="Card image cap">
+                <div class="card-body bg-success text-light">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+                </div>
+            </div>
+        </div>
+        <div class="sol-sm-12 col-lg-3 mt-4">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'img/equipo/Roman.jpg' %}" alt="Card image cap">
+                <div class="card-body bg-success text-light">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-lg-3 mt-4">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'img/equipo/Jorge.jpg' %}" alt="Card image cap">
+                <div class="card-body bg-success text-light">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-lg-3 mt-4">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'img/equipo/Ana.jpg' %}" alt="Card image cap">
+                <div class="card-body bg-success text-light">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-lg-3 mt-4">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'img/equipo/Jorge-Castan.jpg' %}" alt="Card image cap">
+                <div class="card-body bg-success text-light">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-lg-3 mt-4">
+            <div class="card text-center" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'img/equipo/Julia.jpg' %}" alt="Card image cap">
+                <div class="card-body bg-success text-light">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title</p>
+                </div>
+            </div> 
+        </div>
     </div>
-</div>
 </section>
