Seccion de maquinas e instalaciones

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
         {% include 'snipets/patologias.html'%}
         {% include 'snipets/ubicacion.html'%}
         {% include 'snipets/equipo.html'%}
+        {% include 'snipets/cita.html'%}
+        {% include 'snipets/cartas.html' %}
     </article>
 </div>
 {% endblock %}
