--- a/templates/snipets/equipo.html
+++ b/templates/snipets/equipo.html
@@ -10,7 +10,7 @@
     </div>
     <div class="row align-items-center">
         <div class="col-sm-12 col-lg-3 mt-4">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center border-white shadow" style="width: 18rem;">
                 <img class="card-img-top" src="{% static 'img/equipo/Belen.jpg' %}" alt="Card image cap">
                 <div class="card-body bg-success text-light">
                 <h5 class="card-title">Card title</h5>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class=" col-sm-12 col-lg-3 mt-4">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center border-white shadow" style="width: 18rem;">
                 <img class="card-img-top" src="{% static 'img/equipo/David.jpg' %}" alt="Card image cap">
                 <div class="card-body bg-success text-light">
                 <h5 class="card-title">Card title</h5>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="col-sm-3 col-lg-3 mt-4">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center border-white shadow" style="width: 18rem;">
                 <img class="card-img-top" src="{% static 'img/equipo/Alvaro.jpg' %}" alt="Card image cap">
                 <div class="card-body bg-success text-light">
                 <h5 class="card-title">Card title</h5>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="sol-sm-12 col-lg-3 mt-4">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center border-white shadow" style="width: 18rem;">
                 <img class="card-img-top" src="{% static 'img/equipo/Roman.jpg' %}" alt="Card image cap">
                 <div class="card-body bg-success text-light">
                 <h5 class="card-title">Card title</h5>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-lg-3 mt-4">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center border-white shadow" style="width: 18rem;">
                 <img class="card-img-top" src="{% static 'img/equipo/Jorge.jpg' %}" alt="Card image cap">
                 <div class="card-body bg-success text-light">
                   <h5 class="card-title">Card title</h5>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-lg-3 mt-4">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center border-white shadow" style="width: 18rem;">
                 <img class="card-img-top" src="{% static 'img/equipo/Ana.jpg' %}" alt="Card image cap">
                 <div class="card-body bg-success text-light">
                   <h5 class="card-title">Card title</h5>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-lg-3 mt-4">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center border-white shadow" style="width: 18rem;">
                 <img class="card-img-top" src="{% static 'img/equipo/Jorge-Castan.jpg' %}" alt="Card image cap">
                 <div class="card-body bg-success text-light">
                   <h5 class="card-title">Card title</h5>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-lg-3 mt-4">
-            <div class="card text-center" style="width: 18rem;">
+            <div class="card text-center border-white shadow" style="width: 18rem;">
                 <img class="card-img-top" src="{% static 'img/equipo/Julia.jpg' %}" alt="Card image cap">
                 <div class="card-body bg-success text-light">
                   <h5 class="card-title">Card title</h5>
