--- a/templates/snipets/patologias.html
+++ b/templates/snipets/patologias.html
@@ -1,52 +1,53 @@
 {% load static %}
-<section class="d-flex flex-column align-items-center mt-4">
-    <h1>Patologías y tratamientos de fisioterapia</h1>
-    <p>Infórmate sobre lo último en lesiones y rehabilitación muscular y articular</p>
-</section>
-<section>
-       <div class="row text-center">
-            <div class="col m-4">
-                <img src=" {% static 'img/cervical_off.png' %}" alt="">
-                <p class="mt-4">Cervical</p>
-            </div>
-            <div class="col m-4">
-                <img src=" {% static 'img/hombro_off.png' %}" alt="">
-                <p class="mt-4">Hombro</p>
-            </div>
-            <div class="col m-4">
-                <img src=" {% static 'img/lumbar_off.png' %}"  alt="">
-                <p class="mt-4">Lumbar</p>
-            </div>
-            <div class="col m-4">
-                <img src=" {% static 'img/cadera_off.png' %}"  alt="">
-                <p class="mt-4">Cadera</p>
-            </div>
-            <div class="col m-4">
-                <img src=" {% static 'img/dorsal_off.png' %}"  alt="">
-                <p class="mt-4">Dorsal</p>
-            </div>
-       </div>
-       <div class="row text-center">
-            <div class="col m-4">
-                <img src=" {% static 'img/mano_off.png' %}" alt="">
-                <p class="mt-4">Mano y Codo</p>
-            </div>
-            <div class="col m-4">
-                <img src=" {% static 'img/rodilla_off.png' %}" alt="">
-                <p class="mt-4">Rodilla</p>
-            </div>
-            <div class="col m-4">
-                <img src=" {% static 'img/tobillo_off.png' %}"  alt="">
-                <p class="mt-4">Tobillo y Pie</p>
-            </div>
-            <div class="col m-4">
-                <img src=" {% static 'img/atm_off.png' %}"  alt="">
-                <p class="mt-4">ATM</p>
-            </div>
-            <div class="col m-4">
-                <img src=" {% static 'img/femur_off.png' %}"  alt="">
-                <p class="mt-4">Fractura Fémur</p>
-            </div>
-       </div>
-</section>
-<section>
+<div class="bg-light">
+    <section class="d-flex flex-column align-items-center mt-4">
+        <h1>Patologías y tratamientos de fisioterapia</h1>
+        <p>Infórmate sobre lo último en lesiones y rehabilitación muscular y articular</p>
+    </section>
+    <section>
+        <div class="row text-center">
+                <div class="col m-4">
+                    <img src=" {% static 'img/cervical_off.png' %}" alt="">
+                    <p class="mt-4">Cervical</p>
+                </div>
+                <div class="col m-4">
+                    <img src=" {% static 'img/hombro_off.png' %}" alt="">
+                    <p class="mt-4">Hombro</p>
+                </div>
+                <div class="col m-4">
+                    <img src=" {% static 'img/lumbar_off.png' %}"  alt="">
+                    <p class="mt-4">Lumbar</p>
+                </div>
+                <div class="col m-4">
+                    <img src=" {% static 'img/cadera_off.png' %}"  alt="">
+                    <p class="mt-4">Cadera</p>
+                </div>
+                <div class="col m-4">
+                    <img src=" {% static 'img/dorsal_off.png' %}"  alt="">
+                    <p class="mt-4">Dorsal</p>
+                </div>
+        </div>
+        <div class="row text-center">
+                <div class="col m-4">
+                    <img src=" {% static 'img/mano_off.png' %}" alt="">
+                    <p class="mt-4">Mano y Codo</p>
+                </div>
+                <div class="col m-4">
+                    <img src=" {% static 'img/rodilla_off.png' %}" alt="">
+                    <p class="mt-4">Rodilla</p>
+                </div>
+                <div class="col m-4">
+                    <img src=" {% static 'img/tobillo_off.png' %}"  alt="">
+                    <p class="mt-4">Tobillo y Pie</p>
+                </div>
+                <div class="col m-4">
+                    <img src=" {% static 'img/atm_off.png' %}"  alt="">
+                    <p class="mt-4">ATM</p>
+                </div>
+                <div class="col m-4">
+                    <img src=" {% static 'img/femur_off.png' %}"  alt="">
+                    <p class="mt-4">Fractura Fémur</p>
+                </div>
+        </div>
+    </section>
+</div>
